Reduced requirements to Java 1.8