@@ -11,7 +11,7 @@ import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.common.serialization.StringDeserializer;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.Properties;
 
 import static io.confluent.kafka.serializers.AbstractKafkaAvroSerDeConfig.SCHEMA_REGISTRY_URL_CONFIG;
@@ -27,7 +27,7 @@ public class GenericItemConsumer implements ItemConsumer {
 
     @Override
     public void consume() {
-        consumer.subscribe(List.of("items"));
+        consumer.subscribe(Arrays.asList("items"));
         while (true) {
             try {
                 ConsumerRecords<String, Object> records = consumer.poll(1000);
